# epub2mp3

./: .gitignore  README.md  pyproject.toml
example/: mc.epub
src/epub2mp3/: main.py  utils.py
